# ipc-tools

./: .gitignore  README.md  build.gradle  settings.gradle
c/: build.gradle
c/src/main/cpp/: SharedMemery.cpp
c/src/test/cpp/: hello_test.cpp
gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle
java/src/main/java/com/github/preferme/ipc/: ByteBufferFactory.java  EmbeddedLoader.java  Hex.java  Main.java  SharedMemery.java
java/src/test/java/com/github/preferme/ipc/: EmbeddedLoaderTest.java  SharedMemeryTest.java
jni/: build.gradle
jni/src/main/cpp/: SharedMemery.cpp
jni/src/main/public/: com_github_preferme_ipc_SharedMemery.h
jni/src/test/cpp/: hello_test.cpp
nodejs/: CMakeLists.txt  README.md  binding.gyp  build.gradle  index.js  package-lock.json  package.json
nodejs/src/: addon.cpp  shared_memory.cpp  shared_memory.h
src/main/cpp/: CMakeLists.txt  SharedMemery.c  SharedMemery.cpp
src/main/java/com/github/preferme/ipc/: EmbeddedLoader.java  SharedMemery.java
src/test/java/com/github/preferme/ipc/: SharedMemeryTest.java
